updated folder structure

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
             <textarea class="form-control" name="burger" id="newBurger" cols="30"></textarea>
 
         </div>
-        <button class="btn btn-success" type="submit">Add burger!</button>
+        <button class="btn btn-success subButton" type="submit">Add burger!</button>
     </form>
 </div>
 
