--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/style.css" type="text/css">
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/public/js/burger.js"></script>
+    
     <title>Burgers!</title>
+
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="/assets/js/burger.js"></script>
 </head>
 <body>
     {{{body}}}
