--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,7 +19,7 @@
 
 {{!-- entered burgers --}}
 
-<div>
+<div class="divBlock">
     <h2>Burgers to devour: </h2>
     <ul>
         {{#each burgers}}
@@ -35,12 +35,13 @@
         {{/unless}}
         {{/each}}
     </ul>
-
+</div>
+<div class="divBlock2">
     <h2>Burgers already devoured</h2>
     <ul>    
         {{#each burgers}}
         {{#if devoured}}
-            <li> {{id}}.{{name}}</li>
+            <li class="eaten"> {{id}}.{{name}}</li>
         {{/if}}
         {{/each}}
     </ul>
