--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,20 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/assets/css/style.css" type="text/css" />
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <title>Burgers!</title>
-
-    {{!-- <script src="https://code.jquery.com/jquery.js"></script> --}}
-
+    <link rel="stylesheet" href="/public/assets/css/burger_style.css" type="css/text"/>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="/assets/js/script.js"></script>
 </head>
 
 <body>
+    
+    
     {{{body}}}
-   
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
- <script src="/assets/js/script.js"></script>        
-</body>
 
+
+</body>
+ 
 </html>
